# phoe-nix

./: .gitignore  README.md  idea.md
infrastructure/: README.md  appinsights.tf  apply.sh  commnads.md  cosmosdb.tf  destroy.sh  flake.nix  functions.tf  keyvault.tf  locals.tf  outputs.tf  resource_group.tf  role_assignments.tf  servicebus.tf  storage.tf  variables.tf
infrastructure/01-networking/: locals.tf  outputs.tf  variables.tf  versions.tf
infrastructure/02-cosmos/: locals.tf  main.tf  outputs.tf  variables.tf  versions.tf
infrastructure/03-blob-storage/: locals.tf  main.tf  outputs.tf  variables.tf
infrastructure/04-stateless/: locals.tf  main.tf  outputs.tf  variables.tf  versions.tf
log_service/: README.md  flake.nix  pyproject.toml
log_service/src/log_service/: __main__.py  pyproject.toml
