[project]
name = "log_service"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [ ]

[project.scripts]
log_service = "log_service.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/log_service"]

[tool.hatch.build]
sources = ["src"]

